--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ button:hover {
 
 /* Modal Styles */
 .modal {
-    display: none;
+    display: block;
     position: fixed;
     z-index: 1;
     left: 0;
